# nlp-project

./: .gitignore  README.md  pyproject.toml  requirements.txt
configs/: default.yaml
data/processed/: fixture_prepared.json  prepared.json
results/: details.jsonl  summary.csv  summary.md
rs-q2.5-ist/results/: summary.csv  summary.md
rs-q2.5/results/: summary.csv  summary.md
src/rag_zh/: __init__.py  cli.py  config.py  data.py  experiment.py  generation.py  judge.py  reorder.py  retrieval.py  types.py
tests/: test_data.py  test_experiment_output.py  test_generation.py  test_judge.py  test_reorder.py  test_retrieval.py
tests/fixtures/: dureader_sample.jsonl
